# learn-rust

./: Cargo.toml  README.md
learns/general/src/: main.rs  test_ads_api.rs  test_json_parse.rs  test_run_script.rs
learns/x_ads/: Cargo.toml
learns/x_ads/src/: main.rs
src/: lib.rs  main.rs  test_date_time.rs
